--- a/index.j2
+++ b/index.j2
@@ -1,1 +1,4 @@
 <h1> Apache2 web service on ubuntu slave </h1>
+<h1> the ansible node ip is : "{{ansible_all_ipv4_addresses}}" </h1>
+<h1> the ansible os is : "{{ansible_os_family}}" </h1>
+<h1>the java package : "{{myjavaonubuntu}}" </h1>
